Fix for weird width behavioru on mobile

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -58,6 +58,9 @@ a:hover{
   .HeroText {
     margin-left: 25px;
   }
+  .HeroWords{
+    width: 100%;
+  }
 }
 
 .HeroText div iframe{
